reorganize server-side components into services, routes, config

--- a/client/src/chat/Chat.css
+++ b/client/src/chat/Chat.css
@@ -2,8 +2,8 @@
     /* border: 1px dotted lightblue; */
     border-radius: 5px;
 
-    width: 400px;
-    height: 95%;
+    width: 600px;
+    height: 600px;
 
     display: flex;
     flex-direction: column;
