--- a/client/src/chat/Chat.css
+++ b/client/src/chat/Chat.css
@@ -1,9 +1,9 @@
 .Chat {
-    /* border: 1px dotted lightblue; */
+    /* border: 1px dotted white; */
     border-radius: 5px;
 
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: 90%;
 
     display: flex;
     flex-direction: column;
