--- a/client/src/peek/Peek.css
+++ b/client/src/peek/Peek.css
@@ -5,14 +5,15 @@
 }
 
 .Peek {
-    /* border: 1px seagreen dotted; */
+    border: 1px solid rgb(141, 141, 141);
     border-radius: 5px;
     width: 600px;
-    height: 550px;
+    height: 600px;
     padding: 10px 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 20px;
 
 }
 
