--- a/client/src/chat/ChatContainer.css
+++ b/client/src/chat/ChatContainer.css
@@ -1,9 +1,14 @@
 .ChatContainer {
     height: 600px;
-    width: 600px;
+    width: 1000px;
 
     border: 1px solid rgb(141, 141, 141);
     border-radius: 5px;
     margin-bottom: 20px;
     padding: 10px 0px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
