--- a/client/src/input/TaskInput.css
+++ b/client/src/input/TaskInput.css
@@ -18,6 +18,14 @@
     align-items: center;
 }
 
+.button-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+}
+
 .input-list {
     display: flex;
     flex-direction: column;
